--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,23 @@
---- #YAML:1.0
-name:               XML-Hash-XS
-version:            0.03
-abstract:           Simple and fast hash to XML conversion
+---
+abstract: 'Simple and fast hash to XML conversion'
 author:
-    - Yuriy Ustushenko <yoreek@yahoo.com>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Yuriy Ustushenko <yoreek@yahoo.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Scalar::Util:  0
-    Test::More:    0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.113640'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: XML-Hash-XS
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Scalar::Util: 0
+  Test::More: 0
+version: 0.03_01
